# sum_factorization_kernel

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_sum_factorization.cpp
include/: sum_factorization.hpp
tests/: test_sum_factorization.cpp
